Fix horizontal overflow due to footer

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@ body {
   font-family: "Montserrat", Helvetica, Arial, sans-serif;
   font-weight: 500;
   margin: 0;
+  overflow-x: hidden;
 }
 
 *,
